Removed scroll bars to ensure multi-line text box flicker is avoided.

--- a/ui/client-react/src/components/fields/fields.scss
+++ b/ui/client-react/src/components/fields/fields.scss
@@ -159,6 +159,7 @@ textarea:focus, .is-focused:not(.is-open) > .Select-control {
 
 .multiLineCellEditWrapper .cellEdit {
     min-height: 30px;
+    overflow: hidden;
 }
 
 .multiLineCellEditWrapper.error .tipChildWrapper, .multiLineCellEditWrapper.error .tipChildWrapper textarea {
